# Joey_AI

./: .env  .gitignore  502_FIX_SUMMARY.md  BACKEND_500_ERROR_FIX.md  BACKEND_CHAT_ROUTE_COMPLETE.md  CHAT_IMPLEMENTATION_COMPLETE.md  CPU_MODE_IMPLEMENTATION_SUMMARY.md  CPU_MODE_SETUP.md  DASHBOARD_FIX_SUMMARY.md  DEPLOYMENT_CHANGES.md  DIAGNOSTIC_REPORT_AND_FIXES.md  FRONTEND_REBUILD_PHASE1_COMPLETE.md  FRONTEND_REBUILD_PHASE2_COMPLETE.md  IMPORT_ORDER_FIX_FINAL.md  IMPORT_PATH_FIX.md  IMPORT_VERIFICATION_COMPLETE.md  IMPROVEMENTS.md  MANIFEST.in  OLLAMA_BINDING_FIX.md  PACKAGING_GUIDE.md  PHASE_4A_DASHBOARD_ENHANCEMENTS.md  QUICKSTART.md  README.md  STARTUP_VERIFICATION.md  __init__.py  health_response.json  memory.db  nohup.out  pyproject.toml  requirements.txt  setup.py  start.py  test_system_stats.py
backend/: .env  README.md  __init__.py  app.py  config.py  memory.db  presets.json  requirements.txt  settings.json
backend/routes/: __init__.py  chat_routes.py  chats.py  conversation_routes.py  health.py  health_routes.py  llm_gateway.py  memory_routes.py  models.py  models_routes.py  preset_routes.py  query_routes.py  settings_routes.py  system.py  (+1 more)
config-examples/: cline-settings.md  continue-config.json
frontend/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  scripts.js  types.ts  vite-env.d.ts  vite.config.ts
scripts/: README.md  configure_ollama_jetson.sh  dev.sh  diagnose_ollama_binding.sh  fix_ollama_url.sh  restart.sh  start.sh  start_production.sh  start_server.sh  status.sh  stop.sh  verify_cpu_mode.sh  verify_imports.sh
storage/: memory.db
(+46 files in other folders)
