[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "joeyai"
version = "1.0.0"
description = "AI-powered chat interface with Ollama integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Joey", email = "joey@example.com"}
]
keywords = ["ai", "llm", "ollama", "chat", "flask", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
]
dependencies = [
    "Flask>=3.0.0",
    "requests>=2.31.0",
    "urllib3>=2.0.7",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/JoeyEinTX/Joey_AI"
Repository = "https://github.com/JoeyEinTX/Joey_AI"
"Bug Reports" = "https://github.com/JoeyEinTX/Joey_AI/issues"

[project.scripts]
joeyai = "backend.app:main"

[tool.setuptools]
packages = ["backend"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.toml"]
